--- a/2022-1 Data Structure/2022-1 Data Structure.vcxproj
+++ b/2022-1 Data Structure/2022-1 Data Structure.vcxproj
@@ -139,6 +139,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="과제-다항식 덧셈.cpp" />
+    <ClCompile Include="내가 이상하게 짠 다항식 덧셈.cpp" />
+    <ClCompile Include="실습7-1%28원형연결리스트%29.cpp" />
     <ClCompile Include="실습1-1.cpp" />
     <ClCompile Include="실습1-2.cpp" />
     <ClCompile Include="실습1-3.cpp" />
@@ -151,6 +154,7 @@
     <ClCompile Include="실습3-2.cpp" />
     <ClCompile Include="실습3-3.cpp" />
     <ClCompile Include="실습6-1.cpp" />
+    <ClCompile Include="실습7-2(리스트 역순).cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
