--- a/2022-1 Data Structure/2022-1 Data Structure.vcxproj.filters
+++ b/2022-1 Data Structure/2022-1 Data Structure.vcxproj.filters
@@ -84,5 +84,11 @@
     <ClCompile Include="중위표기를 후위표기로.cpp">
       <Filter>리소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="원형 큐.cpp">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="수식 트리.cpp">
+      <Filter>리소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
